# maa-types-rs

./: Cargo.toml  README.md
src/: lib.rs  task.rs
src/message/: mod.rs
src/message/detail/: mod.rs  subtask.rs  taskchain.rs
