[package]
name = "maa_types"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1"

[features]
task = []
message = []
default = ["task", "message"]
