[package]
name = "maa_types"
version = "0.3.2"
edition = "2021"
license-file = "LICENSE"
description = "Types for the Maa."
repository = "https://github.com/KevinT3Hu/maa_types"
homepage = "https://github.com/KevinT3Hu/maa_types"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_default = "0.1.0"
serde_json = "^1"
thiserror = "^1"

[features]
task = []
message = []
default = ["task", "message"]